--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,1 +1,10 @@
 <%# Write your code here! %>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Intro_to_capybara</title>
+	</head>
+	<body>
+		<h1>Hi <%= params[:user_name] %>, nice to meet you!</h1>
+	</body>
+</html>
